// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Radio renders correctly when not selected 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": null,
  "props": {
    "style": {
      "alignItems": "center",
      "borderColor": "#092E3A",
      "borderRadius": 12,
      "borderWidth": 1,
      "height": 16,
      "justifyContent": "center",
      "width": 16,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`Radio renders correctly when selected 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "style": {
          "backgroundColor": "#092E3A",
          "borderRadius": 6,
          "height": 10,
          "width": 10,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "borderColor": "#092E3A",
      "borderRadius": 12,
      "borderWidth": 1,
      "height": 16,
      "justifyContent": "center",
      "width": 16,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`Radio shows inner circle when selected 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "style": {
          "backgroundColor": "#092E3A",
          "borderRadius": 6,
          "height": 10,
          "width": 10,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "borderColor": "#092E3A",
      "borderRadius": 12,
      "borderWidth": 1,
      "height": 16,
      "justifyContent": "center",
      "width": 16,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`Radio does not show inner circle when not selected 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": null,
  "props": {
    "style": {
      "alignItems": "center",
      "borderColor": "#092E3A",
      "borderRadius": 12,
      "borderWidth": 1,
      "height": 16,
      "justifyContent": "center",
      "width": 16,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;
